# Alton

./: .gitignore  Alton.cpp  BUILDING.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CREDIT.md  K.  K..txt  Makefile  README.md  VERSIONING.md  temp.lfi  tempCodeRunnerFile
ArgProcessor/: ArgumentHelper.hpp  ArgumentProcessor.hpp  arg_id.hpp  arg_state_t.hpp  arg_t.hpp
ArgumentProcessor/: Argument.hpp  ArgumentHelper.cpp  ArgumentHelper.hpp  ArgumentProcessor.cpp  ArgumentProcessor.hpp  ArgumentState.hpp  CMakeLists.txt  arg_id.hpp
Art/Diagrams/: AltonWorkDiagram.png~  AltonWorkDiagram.xml
BuildLogs/: ParserGenerator.md
Clinic/: ANSIColour.hpp  CMakeLists.txt  Clinic.cpp  Clinic.hpp  Component.cpp  Component.hpp  ErrorHandler.hpp  FileIndexData.hpp
Clinic/Exceptions/: ErrorTemplates.hpp
Conversions/: CMakeLists.txt  StringConvert.cpp  StringConvert.hpp  ToHex.hpp
ETC/: AltonFunctionDetect.hpp  BareboneMacros.hpp  BaseHelper.hpp  DebugMode.hpp  DoIGetHere.hpp  ErrorHandler.hpp  ErrorTemplates.hpp  FileReader.hpp  Macros.hpp  StringConvert.hpp  VersionData.hpp
ETC/AltonContainers/: BaseContainer.hpp
ETC/_Generation/: ArchitectureMacros.txt  CMakeLists.txt  CompilerMacros.txt  ExampleVersionData.hpp  MajorVersioningNames.txt  OperatingSystemMacros.txt  README.md  StoriesBehindTheNames.md  Version.txt  VersionDataHeaderGenerator.py
Instructions/AbstractSyntaxTree/: ASTHelper.hpp  Parser.hpp  Syntax tree
Instructions/ActionTree/: Actionizer.hpp
Instructions/AnalyzedArguments/: ArgumentHelper.hpp  ArgumentProcessor.hpp
Instructions/AnalyzedParameters/: ParameterProcessor.hpp
Instructions/LexedTree/: LexemHelper.hpp  Lexer.hpp  Tokens.hpp  lexem_t.hpp
Instructions/ParsedTree/: Parser.hpp
Lexer/: CMakeLists.txt  LexemHelper.hpp  Lexeme.hpp  LexemeHelper.cpp  LexemeHelper.hpp  Lexer.cpp  Lexer.hpp  Tokens.cpp  Tokens.hpp  lexem_t.hpp
Lexer/_Generation/: CMakeLists.txt  ExampleTokens.cpp  ExampleTokens.hpp  KeywordList.txt  OperatorList.txt  Token.py  TokenHeaderGenerator.py  TokenList.txt  TokenLists
Parser/: ASTHelper.hpp  AlfieRunData.hpp  CMakeLists.txt  ParseHelper.cpp  ParseHelper.hpp  ParseOperation.cpp  ParseOperation.hpp  ParseOperationType.hpp  ParseRule.hpp  ParseState.cpp  ParseState.hpp  ParseTable.cpp  ParseTable.hpp  Parser.cpp  Parser.hpp  ParserState.hpp  ParsingNode.hpp  Rule.hpp  Symbol.cpp  Symbol.hpp  Syntax tree  TypeType.hpp
Parser/AST/: Arguments.cpp  Arguments.hpp  BaseAST.cpp  BaseAST.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Function.cpp  Function.hpp  InterfaceFunction.cpp  InterfaceFunction.hpp  Location.cpp  Location.hpp  NamespaceInternals.cpp  NamespaceInternals.hpp  ShaderFunction.cpp  ShaderFunction.hpp  Type.cpp  Type.hpp  TypeIdentifier.cpp  TypeIdentifier.hpp
Parser/AST/_Helper/: Make a Node.py
Parser/_Generation/: CMakeLists.txt  Configuration.py  Grammar.py  GrammarList.txt  GrammarParser.py  ParseOperation.py  ParseState.py  ParseTransition.py  ParserGenerator.py  Symbol.py  TemplateParseTable.cpp  TemplateParser.hpp  TemplateSymbol.hpp
Tests/: Tests.lfi
Tools/: CMakeLists.txt  FileReader.cpp  FileReader.hpp  StringConvert.hpp  TextFill.cpp  TextFill.hpp
Tools/Instructions/LexedTree/: TokenHeaderGenerator.py  TokenLists
Tools/PythonGeneralTools/: basic_ne.py  list_equality.py  multiply_without_referencing.py  remove_completely.py  remove_repetitions.py
Tools/WindowsPosixEquivelantCommands/: touch.bat
Types/: BaseContainer.hpp  BaseHelper.hpp  BaseTable.hpp  BaseTreeContainer.hpp
cache/: Alton.asm
